# cobot_autonomy

./: .gitignore  .gitmodules  CONTAINER.md  README.md  autostart.py  robot.cfg
cobot_linux/: CMakeLists.txt  Makefile  package.xml
cobot_linux/config/: drive.cfg
cobot_linux/src/hardware/: CMakeLists.txt  drive.cpp  package.xml
cobot_linux/src/hardware/cobot3_drive/: cobot_drive_main.cpp
cobot_linux/src/shared/math/: gvector.h  line.h
cobot_linux/src/shared/util/: configreader.cpp
cobot_msgs/: CMakeLists.txt  Makefile  README.md  manifest.xml  package.xml
cobot_msgs/msg/: AccelerationLimits.msg  ArduinoSensorMsg.msg  CobotAccelerometerMsg.msg  CobotAccessPointsMsg.msg  CobotAndroidUsbMsg.msg  CobotAnomalyMonitorMsg.msg  CobotAnomalyMonitorRectangleMsg.msg  CobotAskQuestionMsg.msg  CobotCameraMsg.msg  CobotDoorDetectionsMsg.msg  CobotDriveMsg.msg  CobotDriveRawMsg.msg  CobotExecutionFaultMsg.msg  CobotExecutionMonitoringMsg.msg  CobotFloorNumber.msg  CobotFloorNumberMsg.msg  CobotFollowPathMsg.msg  CobotHumanClassified.msg  CobotHumanDetected.msg  CobotHumansClassified.msg  CobotHumansDetected.msg  CobotInteractionGUIMsg.msg  CobotInteractionStatusMsg.msg  CobotJoystickMsg.msg  CobotKinectStatusMsg.msg  CobotLocalization3DMsg.msg  CobotLocalizationMsgRev1854.msg  CobotLocalizationMsgRev1881.msg  CobotLocalizationMsgRev1899.msg  CobotLocalizationMsgRev2043.msg  CobotLocalizationMsgRev378.msg  CobotLocationAndStarGazerMsg.msg  CobotModeMsg.msg  CobotMotionPrimitiveMsg.msg  CobotMotionStatusMsg.msg  CobotOdometryMsg.msg  CobotOdometryMsgRev337.msg  CobotPathMsg.msg  CobotPersonArrayMsg.msg  CobotPersonMsg.msg  (+28 more)
cobot_msgs/srv/: CobotAndroidUsbWriteSrv.srv  CobotArrivedFloor.srv  CobotAskQuestionSrv.srv  CobotBlockedHallwaySrv.srv  CobotCancelQuestionSrv.srv  CobotConfirmationSrv.srv  CobotDialogRequestStopSrv.srv  CobotDialogResponseSrv.srv  CobotDockSrv.srv  CobotFindFloorNumber.srv  CobotFollowHumanPauseSrv.srv  CobotInteractionGUISrv.srv  CobotLocalization3DSrv.srv  CobotMissionListSrv.srv  CobotMotionInterfaceSrv.srv  CobotObjectEvalSrv.srv  CobotReceivedResponseSrv.srv  CobotSchedulerSrv.srv  CobotSendEmailSrv.srv  CobotSpeechRecognitionSrv.srv  CobotStopFindFloorNumber.srv  CobotSwitchModeSrv.srv  CobotTPAbortTaskSrv.srv  CobotTPGoToRoomSrv.srv  CobotTPGoToXYSrv.srv  CobotTPTransportSrv.srv  CobotTalkerSrv.srv  CobotTaskDialogSrv.srv  CobotTaskPlannerStatusSrv.srv  CobotTrajectoryCommand.srv  CobotUICommandSrv.srv  ExpectedLidarObsSrv.srv  GenData.srv  HalloweenDialogSrv.srv  ObservationLikelihoodSrv.srv
cobot_python/: cobot.py
config/: cobot_webviz_config.lua  common.lua  enml.lua  navigation.lua
spacemouse/: spacemouse.py  spacemouse_driver.py
utils/: arm_utils.py  math_utils.py
