<?xml version="2.0"?>
<package format="2">
  <name>cobot_hardware</name>
  <version>0.1.0</version>
  <description>Hardware modules for cobot</description>
  <maintainer email="your@email.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>